[project]
name = "travelgroupsbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Fedor",email = "feodor.a.v.03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "telethon (>=1.38.1,<2.0.0)",
    "phonenumbers (>=8.13.53,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
